--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fontsource-roboto": "^3.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.0",
