--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "action-cable": "^0.0.9",
+    "actioncable": "^5.2.4-4",
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "fontsource-roboto": "^3.1.5",
